# ai-papers

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  dvc.yaml  params.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.dvc/: config
ai_papers/: evaluate.py  generate.py  make_examples.py  process_data.py  test.py
data/raw/: dev.jsonl.dvc  test.jsonl.dvc  train.jsonl.dvc
metrics/: dev.yaml  train.yaml
models/: .gitignore
models/gpt2/: config.json.dvc  merges.txt.dvc  model.safetensors.dvc  tokenizer.json.dvc  tokenizer_config.json.dvc  vocab.json.dvc
prompts/: baseline.txt
